<resources>
    <string name="app_name" translatable="false">Petro-Canada</string>
    <string name="navigation_home_tab">Home</string>
    <string name="navigation_stations_tab">Locations</string>
    <string name="navigation_profile_tab">Account</string>
    <string name="enable_location_dialog_title">Enable Location Services</string>
    <string name="enable_location_dialog_message">We use your location to show your nearest station, give directions and so you can start the pump and pay for fuel through the app. </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_petro_canda_on_the_go">Welcome to Petro-Canada on the go!</string>
    <string name="station_fav_button_add">Add as favourite location</string>
    <string name="station_fav_button_remove">Favourite</string>
    <string name="station_fav_button_signing">Sign in or join to favourite</string>
    <string name="station_services_header">Products &amp; Services</string>
    <string name="station_fuel_header">Fuel options</string>
    <string name="station_carwash_header">Car wash</string>
    <string name="filters_services_header">Products &amp; Services</string>
    <string name="filters_fuel_header">Fuel options</string>
    <string name="filters_carwash_header">Car wash</string>
    <string name="address_warning_message">Your address will be updated within 24 hrs. Some features may be unavailable until then.</string>
    <string name="station_call_button_generic">Call \u00b7 %s</string>
    <string name="station_distance_generic">%.1f km away</string>
    <string name="station_duration_generic">%1s drive</string>
    <string name="station_open_generic">Open until %s</string>
    <string name="station_closed">Closed</string>
    <string name="station_hours_list_title">Hours</string>
    <string name="station_open_24hrs">Open 24 hours</string>
    <string name="station_directions_button">Directions</string>
    <string name="station_search_hint">Where to?</string>
    <string name="filters_fragment_title">Filter by</string>
    <string name="filters_apply_button">Apply</string>
    <string name="filters_clear_button">Clear All</string>
    <string name="filters_only_in_qc_message">(only available in QC)</string>
    <string name="station_result_no_stations_found">Sorry, we can\'t find any results</string>
    <string name="station_result_no_stations_filters_applied">Try expanding your search or removing filters.</string>
    <string name="suggestions_fragment_title">suggestions</string>
    <string name="suggestions_no_results">No results</string>
    <string name="station_clear_filters_button">clear filters</string>
    <string name="station_clear_all_filters_chip">Clear all</string>
    <string name="suggestions_search_hint">Where to?</string>
    <string name="station_recently_searched">Recent search</string>
    <string name="join">join</string>
    <string name="sign_in">sign in</string>
    <string name="drive_safely">DRIVE SAFELY</string>
    <string name="safety_message">Remember to be responsible. Please don\'t use your phone while driving.</string>
    <string name="error">Error</string>
    <string name="login_email_field_label">Email</string>
    <string name="login_email_field_error">Email is required.</string>
    <string name="login_password_field_error">Password is required.</string>
    <string name="login_in_progress">Signing in</string>
    <string name="login_invalid_credentials_dialog_title">Invalid Email or Password</string>
    <string name="login_invalid_credentials_dialog_1st_message">Please try again. If you recently created an account, check your inbox for your verification link.</string>
    <string name="login_invalid_credentials_dialog_2nd_message">%1d attempts left before the app gets locked for %2d mins</string>
    <string name="login_invalid_credentials_reset_password">Reset password</string>
    <string name="login_soft_lock_alert_title">Account locked</string>
    <string name="clpe_down_prompt">Points redemption is not available at this time. Your Petro-Points details will be updated within 24 hours. </string>
    <string name="clpe_down_prompt_heading">Petro-Points is unavailable </string>
    <string name="login_soft_lock_alert_message">Sign in is locked due to %1d failed attempts.\nRetry in %2d minutes.</string>
    <string name="security_answer_soft_lock_alert_message">You\'ve entered the wrong security answer too many times. Please try again in 30 minutes.</string>
    <string name="security_answer_soft_lock_retry_alert_message"> You entered the wrong security answer too many times. Please wait X minutes before trying to sign in.</string>
    <string name="login_forgot_password_button">Forgot password</string>
    <string name="forgot_password_alert_title">Password reset failed</string>
    <string name="forgot_password_alert_message">Try again later. If you recently created an account, check your inbox for your verification link.</string>
    <string name="login_password_field">Password</string>
    <string name="favourites_remove_station_message">Station removed</string>
    <string name="favourites_fragment_title">Favourites</string>
    <string name="favourites_no_result">No favourite stations</string>
    <string name="favourites_no_result_text">You can use Favourites to quickly find the car wash you love or that store with your favourite slush flavour.</string>
    <string name="favourites_add_station_button">Add a station</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="profile_sign_out_button">Sign out</string>
    <string name="station_distance_unavailable">Distance not available</string>
    <string name="login_prompt_title">Sign-in or join to favourite</string>
    <string name="login_prompt_message">Sign in to your Petro-Points account to access all features, including favourites.</string>
    <string name="expand_range">Expand your range.</string>
    <plurals name="hours_distance">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="minutes_distance">min</string>
    <string name="home_nearest_card_title">Nearest Station</string>
    <string name="suggestions_fragment_nearby_title">Nearest</string>
    <string name="enrollment_card_question">Do you have a \n Petro\u2011Points card?</string>
    <string name="enrollment_card_question_body">You can use your points for dollars off fuel, car wash, or store purchases.</string>
    <string name="enrollment_yes_i_have_a_card_button">Yes, I have a card.</string>
    <string name="enrollment_no_i_don_t_have_a_card_button">No, I don\'t have a card.</string>
    <string name="enrollment_personal_information_category">Personal information</string>
    <string name="app_outdated_dialog_message">Your app is outdated. To join the program, please download the newest version.</string>
    <string name="app_outdated_dialog_message_profile">Your app is outdated. To update your info, please download the newest version.</string>
    <string name="app_outdated_title_message">Download our newest app</string>
    <string name="enrollment_first_name_label">First name</string>
    <string name="enrollment_last_name_label">Last name</string>
    <string name="enrollment_email_label">Email</string>
    <string name="enrollment_password_label">Password</string>
    <string name="enrollment_security_question_label">Security Question</string>
    <string name="enrollment_street_address_label">Street address</string>
    <string name="enrollment_security_answer_label">Answer</string>
    <string name="enrollment_city_label">City</string>
    <string name="enrollment_province_label">Province</string>
    <string name="enrollment_postalcode_label">Postal code</string>
    <string name="enrollment_phone_label">Phone (optional)</string>
    <string name="enrollment_address_category">Address</string>
    <string name="enrollment_preferences_category">Preferences and terms</string>
    <string name="enrollment_email_offers_label">Yes, I\'d like to receive news, offers and partner discounts from Petro-Points.</string>
    <string name="enrollment_email_offers_hint">You can unsubscribe at any time.</string>
    <string name="enrollment_fingerprint_label">I\'d like to use Touch ID to sign in</string>
    <string name="enrollment_fingerprint_hint">Use Touch ID to sign in, authorize purchases, reload your Petro-Canada cards and more.</string>
    <string name="enrollment_terms_agreement">By creating an account, I agree to the Petro-Points <a href="https://www.petro-canada.ca/en/personal/terms-conditions#petropoints">terms and conditions</a></string>
    <string name="enrollment_join_button">Join</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="enrollment_form_header">Let\'s get you signed up. Plus, collect %s Petro-Points.</string>
    <string name="enrollment_form_title">Let\'s get you signed up.</string>
    <string name="enrollment_leave_alert_title">Leave Create Account?</string>
    <string name="enrollment_leave_alert_message">The details you\'ve entered won\'t be saved if you leave. Leave the Create Account form?</string>
    <string name="enrollment_first_name_error">First name is required.</string>
    <string name="enrollment_last_name_error">Last name is required.</string>
    <string name="enrollment_email_empty_error">Email is required.</string>
    <string name="enrollment_password_empty_error">Password is required.</string>
    <string name="enrollment_street_address_error">Address is required.</string>
    <string name="enrollment_secuirty_question_error">Please select a security question.</string>
    <string name="enrollment_secuirty_answer_error">Answer is required.</string>
    <string name="enrollment_phone_field_invalid_format">Please enter a valid phone number (e.g. 416-123-4567)</string>
    <string name="enrollment_city_error">City is required.</string>
    <string name="enrollment_province_error">Province is required.</string>
    <string name="enrollment_postalcode_error">Postal code is required.</string>
    <string name="enrollment_postalcode_format_error">The postal code you entered isn\'t valid.</string>
    <string name="enrollment_email_restricted_alert_title">Please enter a different email address or Call 1-800-668-0220 if you have any issues.</string>
    <string name="enrollment_email_format_error">Please enter a valid email address.</string>
    <string name="discover_your_next_adventure">FIND YOUR \nHAPPY PLACE</string>
    <string name="password_validation_text_length">Must be 8-16 characters</string>
    <string name="password_validation_lowercase">At least one lowercase letter</string>
    <string name="password_validation_uppercase">At least one uppercase letter</string>
    <string name="navigation_cards_tab">Wallet</string>
    <string name="profile_personnal_informations_header">Personal Information</string>
    <string name="profile_personnal_informations_firstName">First name</string>
    <string name="profile_personnal_informations_lastName">Last name</string>
    <string name="profile_personnal_informations_phone">Phone (optional)</string>
    <string name="profile_personnal_informations_email">Email</string>
    <string name="profile_personnal_informations_subcopy2">Please note, in order to protect your account, if you change your email address you will not be able to redeem points online or in-store for 24 hours.</string>
    <string name="profile_personnal_informations_subcopyEmail">Changing your email will automatically log you out, require you to verify your new address and you will be unable to receive an eGift card redemption for 24 hours.</string>
    <string name="profile_personnal_informations_button1">Save</string>
    <string name="navigation_rewards_tab">Petro-Points</string>
    <string name="navigation_rewards_signedin_tab">Redeem</string>
</resources>