<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/black_60"
        android:title="@string/navigation_home_tab" />
    <item
        android:id="@+id/rewards_tab"
        android:icon="@drawable/ic_rewards"
        android:iconTint="@color/black_60"
        android:title="@string/navigation_rewards_tab" />
    <item
        android:id="@+id/stations_tab"
        android:icon="@drawable/ic_locations"
        android:iconTint="@color/black_60"
        android:title="@string/navigation_stations_tab" />
    <item
        android:id="@+id/cards_tab"
        android:icon="@drawable/ic_cards"
        android:iconTint="@color/black_60"
        android:title="@string/navigation_cards_tab" />
    <item
        android:id="@+id/profile_tab"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/black_60"
        android:title="@string/navigation_profile_tab" />

</menu>