<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventHandler"
            type="suncor.com.android.ui.enrollement.form.EnrollmentFormFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <suncor.com.android.uicomponents.SuncorAppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitle="@string/enrollment_form_header"
            app:title="@string/enrollment_form_title" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingEnd="16dp"
                android:paddingBottom="28dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/personal_category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/gibson_semibold"
                    android:text="@string/enrollment_personal_information_category"
                    android:textAppearance="@style/Body"
                    android:textColor="@color/black_80"
                    app:layout_constraintTop_toTopOf="parent" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_first_name_label"
                    android:maxLength="20"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/personal_category_title" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_last_name_label"
                    android:maxLength="20"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/first_name_input" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_email_label"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/last_name_input" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_password_label"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/email_input"
                    app:passwordToggleEnabled="true" />

                <suncor.com.android.uicomponents.SuncorSelectInputLayout
                    android:id="@+id/security_question_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_security_question_label"
                    app:layout_constraintTop_toBottomOf="@id/password_input" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/security_answer_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_security_answer_label"
                    android:inputType="textPostalAddress"
                    android:maxLength="100"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/security_question_input" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/address_category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/gibson_semibold"
                    android:text="@string/enrollment_address_category"
                    android:textAppearance="@style/Body"
                    android:textColor="@color/black_80"
                    app:layout_constraintTop_toBottomOf="@id/security_answer_input" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/street_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/enrollment_street_address_label"
                    android:inputType="textPostalAddress"
                    android:maxLength="50"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/address_category_title" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/city_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_city_label"
                    android:maxLength="30"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/street_address_input" />

                <suncor.com.android.uicomponents.SuncorSelectInputLayout
                    android:id="@+id/province_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_province_label"
                    app:layout_constraintTop_toBottomOf="@id/city_input" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/postalcode_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_postalcode_label"
                    android:inputType="textCapCharacters"
                    android:maxLength="7"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/province_input" />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enrollment_phone_label"
                    android:inputType="phone"
                    android:maxLength="14"
                    app:afterTextChanged="@{eventHandler.textChanged}"
                    app:focusChanged="@{eventHandler.focusChanged}"
                    app:layout_constraintTop_toBottomOf="@id/postalcode_input" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/preferences_category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/gibson_semibold"
                    android:text="@string/enrollment_preferences_category"
                    android:textAppearance="@style/Body"
                    android:textColor="@color/black_80"
                    app:layout_constraintTop_toBottomOf="@id/phone_input" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/news_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineSpacingMultiplier="1.21"
                    android:text="@string/enrollment_news_label"
                    android:textAppearance="@style/Caption1"
                    app:layout_constraintTop_toBottomOf="@id/preferences_category_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/news_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingMultiplier="1.17"
                    android:text="@string/enrollment_news_unsubscribe_hint"
                    android:textAppearance="@style/Caption2"
                    app:layout_constraintTop_toBottomOf="@id/news_checkbox" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/fingerprint_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:lineSpacingMultiplier="1.21"
                    android:text="@string/enrollment_fingerprint_label"
                    android:textAppearance="@style/Caption1"
                    app:layout_constraintTop_toBottomOf="@id/news_hint" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fingerprint_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingMultiplier="1.17"
                    android:text="@string/enrollment_fingerprint_hint"
                    android:textAppearance="@style/Caption2"
                    app:layout_constraintTop_toBottomOf="@id/fingerprint_checkbox" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/terms_agreement"
                    style="@style/Caption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:lineSpacingMultiplier="1.57"
                    android:textAppearance="@style/Caption1"
                    app:layout_constraintTop_toBottomOf="@id/fingerprint_hint"
                    tools:text="@string/enrollment_terms_agreement" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/join_button"
                    style="@style/SmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> eventHandler.joinButtonClicked()}"
                    android:text="@string/enrollment_join_button"
                    app:layout_constraintTop_toBottomOf="@id/terms_agreement" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
