<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="suncor.com.android.ui.home.profile.PersonalInfoFragment">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical">

        <suncor.com.android.uicomponents.SuncorAppBarLayout
            android:id="@+id/app_bar"
            app:dragable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/profile_personnal_informations_header"
            />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="suncor.com.android.uicomponents.ScrollViewBehaviorFix">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/firstname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_personnal_informations_firstName"
                    android:focusable="false"
                    app:layout_constraintBottom_toTopOf="@id/postalcode_input"
                    android:layout_marginTop="25dp"
                    android:inputType="none"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/lastname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_personnal_informations_lastName"
                    android:inputType="none"
                    app:layout_constraintTop_toBottomOf="@id/firstname_input"
                     />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_personnal_informations_phone"
                    app:layout_constraintTop_toBottomOf="@id/lastname_input"
                     />

                <suncor.com.android.uicomponents.SuncorTextInputLayout
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_personnal_informations_email"
                    app:layout_constraintTop_toBottomOf="@id/phone_input"
                     />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subcopyEmail"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_alert_black"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:paddingLeft="4dp"
                    android:visibility="gone"
                    android:text="@string/profile_personnal_informations_subcopyEmail"
                    android:textAppearance="@style/Caption1"
                    app:layout_constraintTop_toBottomOf="@id/email_input"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subcopy1"
                    android:drawableLeft="@drawable/ic_alert_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:paddingLeft="4dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_personnal_informations_subcopy1"
                    android:textAppearance="@style/Caption2"
                    app:layout_constraintTop_toBottomOf="@id/subcopyEmail"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subcopy2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:drawableLeft="@drawable/ic_alert_black"
                    android:text="@string/profile_personnal_informations_subcopy2"
                    android:textAppearance="@style/Caption2"
                    app:layout_constraintTop_toBottomOf="@id/subcopy1"
                    />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_button"
                    style="@style/FilledButton.Red.L"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/subcopy2"
                    android:text="@string/profile_personnal_informations_button1"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
